# al-wazeer

./: .gitignore  README.md  __init__.py  app.json  package-lock.json  package.json  pyproject.toml  requirements.txt  urls.py
.github/workflows/: black.yml  django.yml  ruff.yml
al_wazeer/: __init__.py  apps.py  mixins.py  permissions.py  routing.py  urls.py
al_wazeer/assistants/: __init__.py  apps.py  models.py  serializers.py  views.py
al_wazeer/chats/: __init__.py  apps.py  consumers.py  models.py  serializers.py  views.py
al_wazeer/messages/: __init__.py  apps.py  consumers.py  models.py  serializers.py  views.py
al_wazeer/ui/: __init__.py  apps.py  forms.py  mixins.py  urls.py  views.py
al_wazeer/users/: __init__.py  apps.py  models.py  serializers.py
botland/: apps.py  permissions.py  urls.py
botland/bots/: models.py  serializers.py  urls.py
botland/chats/: __init__.py  serializers.py  urls.py  views.py
botland/messages/: apps.py  models.py  serializers.py  urls.py  views.py
botland/users/: models.py  serializers.py  views.py
bots/: __init__.py  apps.py  models.py  serializers.py  views.py
bots/migrations/: 0001_initial.py  0002_alter_bot_name_alter_bot_slug.py
bots/tests/: test_models.py
chats/: apps.py  models.py  serializers.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_alter_chat_bot_alter_chat_user.py  0002_initial.py
chats/tests/: test_models.py
messages/: __init__.py  consumers.py  models.py  routing.py  serializers.py  views.py
messages/migrations/: 0001_initial.py  0002_alter_message_bot_alter_message_user.py  0002_initial.py  0003_alter_message_bot_alter_message_chat_and_more.py  0003_alter_message_content.py
messages/tests/: test_models.py
users/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+58 files in other folders)
